# flutter_audio_convert

./: .gitignore  .metadata  README.md  pubspec.yaml
android/: CMakeLists.txt  audio_convert.cc  build.gradle  settings.gradle
android/src/main/: AndroidManifest.xml
android/src/main/kotlin/com/example/flutter_audio_convert/: FlutterAudioConvertPlugin.kt
example/: .metadata  README.md  build_android.sh  pubspec.yaml
example/android/app/: build.gradle
example/android/app/src/main/: AndroidManifest.xml
example/android/app/src/main/kotlin/com/example/flutter_audio_convert_example/: MainActivity.kt
example/android/app/src/profile/: AndroidManifest.xml
example/ios/Runner/: Info.plist
example/ios/Runner.xcodeproj/: project.pbxproj
example/lib/: main.dart
example/test/: widget_test.dart
ios/: flutter_audio_convert.podspec
ios/Classes/: FlutterAudioConvertPlugin.h  FlutterAudioConvertPlugin.m  SwiftFlutterAudioConvertPlugin.swift
lib/: flutter_audio_convert.dart  isolate.dart
test/: flutter_audio_convert_test.dart
